RESOLVED FIXED134272
Tiles on bottom of screen are not always allocated when necessary
https://bugs.webkit.org/show_bug.cgi?id=134272
Summary Tiles on bottom of screen are not always allocated when necessary
Myles C. Maxfield
Reported 2014-06-24 15:00:28 PDT
Tiles on bottom of screen are not always allocated when necessary
Attachments
Patch (3.30 KB, patch)
2014-06-24 15:08 PDT, Myles C. Maxfield
no flags
Patch (6.25 KB, patch)
2014-06-24 16:25 PDT, Myles C. Maxfield
no flags
Patch (6.98 KB, patch)
2014-06-25 19:14 PDT, Myles C. Maxfield
simon.fraser: review+
Myles C. Maxfield
Comment 1 2014-06-24 15:08:26 PDT
Myles C. Maxfield
Comment 2 2014-06-24 15:09:32 PDT
Myles C. Maxfield
Comment 3 2014-06-24 15:14:04 PDT
Comment on attachment 233749 [details] Patch Broke all the tests!
Myles C. Maxfield
Comment 4 2014-06-24 15:24:16 PDT
Comment on attachment 233749 [details] Patch No tests
Myles C. Maxfield
Comment 5 2014-06-24 16:25:17 PDT
Myles C. Maxfield
Comment 6 2014-06-24 18:26:07 PDT
WebKit Commit Bot
Comment 9 2014-06-24 21:26:06 PDT
Re-opened since this is blocked by bug 134291
Ryosuke Niwa
Comment 10 2014-06-24 21:28:18 PDT
Sorry, I can't figure out what the right fix is because I don't know the context so I'm rolling out the patch for now.
Joseph Pecoraro
Comment 11 2014-06-25 17:53:26 PDT
Myles C. Maxfield
Comment 12 2014-06-25 19:14:24 PDT
Myles C. Maxfield
Comment 13 2014-06-30 14:22:19 PDT
Note You need to log in before you can comment on or make changes to this bug.